--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["react-app", "airbnb", "prettier"],
   "rules": {
+    "jsx-a11y/label-has-for": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js",".jsx"] }],
     "no-useless-escape": "off",
     "no-script-url": "off",
